tests/NormalTests/paczka1/small_fuzzy/30993766.err
Error in line 1: RrCtNqCCr A829 17,9
Error in line 2: A875 S54 76,4
Error in line 4: W9FrGk A829 11,3
Error in line 8: 6HmiU50 S57 94,0
